--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.3
   http: ^0.13.4
   dio: ^5.1.2
+  connectivity_plus: ^3.0.3
 
 dev_dependencies:
   flutter_test:
