--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   http: ^0.13.4
   dio: ^5.1.2
   connectivity_plus: ^3.0.3
+  onesignal_flutter: ^3.5.0
+  fluttertoast: ^8.0.8
+  shimmer: ^2.0.0
+  lottie: ^2.3.0
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
