--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_svg: ^2.0.5
 
   flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
