--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,13 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.2.1
 
+  flutter_dotenv: ^5.0.2
+  image_picker: ^0.8.3+2
+  path_provider: ^2.0.14
+  uuid: ^4.2.1
+  open_filex: ^4.3.2
+  simple_barcode_scanner: ^0.0.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
