--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,10 @@ dependencies:
   permission_handler: ^10.4.3
   async: ^2.10.0
 
+  syncfusion_flutter_charts: ^19.3.61
+  dropdown_search: ^5.0.6
+  webview_flutter: ^2.0.14
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,6 +80,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  floor_generator: ^1.4.1
+  build_runner: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
