--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,60 +1,91 @@
-name: iosbuilddep
+name: Metabill
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+
+orientation:
+
+  android:
+
+    portrait:
+      enabled: true
+
+    landscape:
+      enabled: true
+
+  ios:
+
+    general:
+      enabled: true
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: '>=2.19.2 <3.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
+  #  flutter_localizations:
+  #    sdk: flutter
 
+  # firebase:
+  #  firebase_core: ^1.6.0
+  #  firebase_auth: ^4.4.2
+  #  firebase_core_platform_interface: 4.6.0
+  #  google_mlkit_text_recognition: ^0.5.0
+  #  google_ml_kit: ^0.13.0
+  # tflite: ^1.1.2
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  #  firebase_core: ^1.6.0
+  #  firebase_ml_vision: ^0.11.0
+
   intl: ^0.17.0
+
+  #cupertino_icons: ^1.0.2
   provider: ^6.0.3
+
+
+  # network request:
   http: ^0.13.4
   dio: ^5.1.2
   connectivity_plus: ^3.0.3
+
+  #push_notification:
   onesignal_flutter: ^3.5.0
+
+
+  #local database:
+  #  sqflite: ^2.2.5
+  #  floor: ^1.4.0
+  #  objectbox: ^1.7.2
+
+
+  # decore
   fluttertoast: ^8.0.8
   shimmer: ^2.0.0
   lottie: ^2.3.0
   flutter_svg: ^2.0.5
 
+
+  #database:
   flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.2.1
 
+
+  #obfuscate
   flutter_dotenv: ^5.0.2
+
+
+  #services:
   image_picker: ^0.8.3+2
   path_provider: ^2.0.14
   uuid: ^4.2.1
   open_filex: ^4.3.2
+  #  simple_barcode_scanner: ^0.0.8
 
+
+  #helpers:
   device_info_plus: ^8.2.0
   package_info_plus: ^3.1.0
   open_settings: ^2.0.2
@@ -66,61 +97,52 @@ dependencies:
   permission_handler: ^10.4.3
   async: ^2.10.0
 
+
+  #widgets:
   syncfusion_flutter_charts: ^19.3.61
   dropdown_search: ^5.0.6
   webview_flutter: ^2.0.14
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   floor_generator: ^1.4.1
   build_runner: ^2.1.2
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#  assets:
+#    - assets/locale.json
+#    - assets/png/
+#    - assets/svg/
+#    - assets/lottie/
+#    - assets/test/
+#    - assets/sounds/
+#    - .env
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+#  fonts:
+#    - family: opensansreg
+#      fonts:
+#        - asset: assets/fonts/opensansreg.ttf
+#    - family: rubikreg
+#      fonts:
+#        - asset: assets/fonts/rubikreg.ttf
+#    - family: nutinoreg
+#      fonts:
+#        - asset: assets/fonts/nutinoreg.ttf
+#    - family: lato
+#      fonts:
+#        - asset: assets/fonts/latoreg.ttf
+##    - family: sourcesans
+##      fonts:
+##        - asset: assets/fonts/SourceSansReg.ttf
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
