--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   uuid: ^4.2.1
   open_filex: ^4.3.2
   #  simple_barcode_scanner: ^0.0.8
+  flutter_barcode_scanner: ^2.0.0
 
 
   #helpers:
